--- a/nodes/configs/nodes/node-0/accounts.conf
+++ b/nodes/configs/nodes/node-0/accounts.conf
@@ -3,7 +3,7 @@ accounts-generator {
   chain-id = "V"
   amount = 1
   wallet = "./output/configs/nodes/node-0/keystore.dat"
-  wallet-password = "kweAcVm8XaqaQU4yaZlY0g"
+  wallet-password = "MJgVl2AqlFZkm9xVU5fQVQ"
   reload-node-wallet {
     enabled = false
     url = "http://localhost:6862/utils/reload-wallet"
