--- a/nodes/configs/nodes/node-1/accounts.conf
+++ b/nodes/configs/nodes/node-1/accounts.conf
@@ -3,7 +3,7 @@ accounts-generator {
   chain-id = "V"
   amount = 1
   wallet = "./output/configs/nodes/node-1/keystore.dat"
-  wallet-password = "VQ0BhyrRS8LTC8QLy52JEQ"
+  wallet-password = "tO3atWGp6me-QAK7IQHAcw"
   reload-node-wallet {
     enabled = false
     url = "http://localhost:6862/utils/reload-wallet"
