--- a/nodes/configs/nodes/node-2/accounts.conf
+++ b/nodes/configs/nodes/node-2/accounts.conf
@@ -3,7 +3,7 @@ accounts-generator {
   chain-id = "V"
   amount = 1
   wallet = "./output/configs/nodes/node-2/keystore.dat"
-  wallet-password = "7QtS1fwINs_J1Uk6GMK3Jg"
+  wallet-password = "92uLEOgMpNyu4GcYhsluAA"
   reload-node-wallet {
     enabled = false
     url = "http://localhost:6862/utils/reload-wallet"
