--- a/contract/Dockerfile
+++ b/contract/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8-slim-buster
 RUN apt update && apt install -yq dnsutils
 RUN pip3 install grpcio-tools
-ADD src/contract.py /
+ADD src/mail.py /
 ADD src/protobuf /protobuf/
 ADD run.sh /
 RUN chmod +x run.sh
